# uniflo-api

./: .env.example  .gitignore  CHANGES.md  CLAUDE.md  Makefile  PHASE2_AUDIT.md  README.md  conftest.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: backend.yml
alembic/: env.py
app/: config.py  db.py  intake.py  main.py  programme_data.py  rate_limit.py  supabase_client.py
docs/: partner-b-phase-3-plan.md
scripts/: check_prospectus_year.py  seed_careers.py  seed_programmes.py  seed_universities.py
tests/: conftest.py  test_academic_records_endpoints.py  test_account_endpoints.py  test_admin_endpoints.py  test_ai_client.py  test_ai_field_mapping.py  test_ai_providers.py  test_applications_challenge_endpoint.py  test_applications_endpoints.py  test_auth_endpoints.py  test_auth_middleware.py  test_automation_dispatch.py  test_automation_runtime.py  test_captcha.py  test_careers_endpoints.py  test_careers_explore.py  test_careers_matching.py  test_challenge_sources.py  test_contacts_endpoints.py  test_documents_endpoints.py  test_field_mappings.py  test_mapping_completed_matric.py  test_mapping_cross_portal.py  test_mapping_international_upgrading.py  test_ping.py  test_profile_endpoints.py  test_programme_data_freshness.py  test_programmes_model.py  test_recommendation_scoring.py  test_recommendations_endpoint.py  test_screenshots.py  test_seed_programmes.py  test_subjects.py  test_uct_adapter.py  test_uct_scoring.py  test_uj_adapter.py  test_uj_programmes.py  test_universities_endpoints.py  test_up_adapter.py  test_webhooks.py  (+2 more)
(+147 files in other folders)
