[project]
name = "uniflo-api"
version = "0.1.0"
requires-python = ">=3.12"

[tool.ruff]
line-length = 88
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I"]
# Line length is enforced by the formatter (black); skip as a lint error.
ignore = ["E501"]

[tool.black]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
# Async tests (automation runtime) run without a per-test marker.
asyncio_mode = "auto"
